[gd_scene load_steps=27 format=2]

[ext_resource path="res://menus/character-select/SelectionBox.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/boarder.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/cover2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/cover.png" type="Texture" id=4]
[ext_resource path="res://assets/images/characters/jackie/portrait.png" type="Texture" id=5]
[ext_resource path="res://assets/images/characters/drill/portrait.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/grid.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/gate.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/ready.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/left.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/right.png" type="Texture" id=11]
[ext_resource path="res://gameplay/player/Shark.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sound/sfx/char_select.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/sfx/char_select_ready.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/sfx/menu_back.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sound/sfx/jackie/jackie_parrot_select.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sound/sfx/drill/drill_select.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sound/sfx/king/king_hook_select.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sound/sfx/outsider/the_outsider_select.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "change_char_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ChangePortrait:region_rect")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 301, 446 ), Rect2( 301, 0, 301, 446 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChangePortrait:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portrait:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.28 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portrait:region_rect")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.28 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 0, 446 ), Rect2( 0, 0, 290, 446 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChangePortrait:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "change_char_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Portrait:region_rect")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 250, 0, 301, 446 ), Rect2( 0, 0, 301, 446 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChangePortrait:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChangePortrait:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 130, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChangePortrait:region_rect")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 290, 446 ), Rect2( 0, 0, 0, 446 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portrait:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 30, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Portrait:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gate:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -385 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gate:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portrait:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -223 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portrait:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 301, 446 ), Rect2( 0, 0, 301, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ready:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DeviceSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Grid:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Left:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Right:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ChangePortrait:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Portrait:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gate:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -385 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gate:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portrait:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -223 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portrait:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 301, 0 ), Rect2( 0, 0, 301, 446 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ready:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DeviceSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Grid:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Right:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Left:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Gate:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -385 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Grid:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -223 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Grid:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 301, 0 ), Rect2( 0, 0, 301, 446 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gate:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ready:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ready:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, 15.0, -8.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Portrait:region_rect")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 301, 446 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Grid:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Portrait:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Left:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Right:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ChangePortrait:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Gate:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -385 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Grid:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -223 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Grid:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 301, 446 ), Rect2( 0, 0, 301, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gate:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ready:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Right:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Left:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="SelectionBox" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 1 )

[node name="Boarder" type="Sprite" parent="."]
position = Vector2( 130, 130 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Cover" type="AnimatedSprite" parent="Boarder"]
show_behind_parent = true
frames = SubResource( 1 )

[node name="Portrait" type="Sprite" parent="Boarder"]
visible = false
show_behind_parent = true
position = Vector2( 0, -223 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 301, 0 )

[node name="ChangePortrait" type="Sprite" parent="Boarder"]
visible = false
show_behind_parent = true
position = Vector2( 10, 0 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 301, 0, 301, 446 )

[node name="Grid" type="Sprite" parent="Boarder"]
visible = false
position = Vector2( 0, -223 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 301, 0 )

[node name="Gate" type="Sprite" parent="Boarder"]
visible = false
position = Vector2( 0, -385 )
texture = ExtResource( 8 )

[node name="Ready" type="Sprite" parent="Boarder"]
visible = false
texture = ExtResource( 9 )

[node name="DeviceSprite" type="TextureRect" parent="Boarder"]
visible = false
margin_left = -55.0
margin_top = 150.0
margin_right = 73.0
margin_bottom = 278.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="Left" type="TextureRect" parent="Boarder"]
visible = false
margin_left = -140.0
margin_top = -40.0
margin_right = -60.0
margin_bottom = 40.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
expand = true

[node name="Right" type="TextureRect" parent="Boarder"]
visible = false
margin_left = 70.0
margin_top = -30.0
margin_right = 150.0
margin_bottom = 50.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boarder"]
anims/change_char_left = SubResource( 2 )
anims/change_char_right = SubResource( 3 )
anims/close = SubResource( 4 )
anims/open = SubResource( 5 )
anims/ready = SubResource( 6 )
anims/unready = SubResource( 7 )

[node name="SharkSprite" type="Node2D" parent="."]
position = Vector2( 100, 460 )
scale = Vector2( -1, 1 )
z_index = 1

[node name="Shark" parent="SharkSprite" instance=ExtResource( 12 )]

[node name="SharkChangeTimer" type="Timer" parent="SharkSprite"]
wait_time = 0.5
one_shot = true

[node name="SharkChangeTween" type="Tween" parent="SharkSprite"]

[node name="Sounds" type="Node" parent="."]

[node name="SelectSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -6.0
bus = "SFX"

[node name="ConfirmSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -4.289
bus = "SFX"

[node name="CancelSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
volume_db = -6.0
bus = "SFX"

[node name="JackieSFXs" type="Node" parent="Sounds"]

[node name="SFX1" type="AudioStreamPlayer" parent="Sounds/JackieSFXs"]
stream = ExtResource( 16 )
volume_db = 4.0
bus = "SFX"

[node name="DrillSFXs" type="Node" parent="Sounds"]

[node name="SFX1" type="AudioStreamPlayer" parent="Sounds/DrillSFXs"]
stream = ExtResource( 17 )
volume_db = 4.0
bus = "SFX"

[node name="KingSFXs" type="Node" parent="Sounds"]

[node name="SFX1" type="AudioStreamPlayer" parent="Sounds/KingSFXs"]
stream = ExtResource( 18 )
volume_db = 4.0
bus = "SFX"

[node name="OutsiderSFXs" type="Node" parent="Sounds"]

[node name="SFX1" type="AudioStreamPlayer" parent="Sounds/OutsiderSFXs"]
stream = ExtResource( 19 )
volume_db = 4.0
bus = "SFX"
[connection signal="timeout" from="SharkSprite/SharkChangeTimer" to="." method="_on_SharkChangeTimer_timeout"]
